--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/onemok/BerryHealthy-HackThe6ix#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "got": "^12.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
