--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "got": "^12.3.1"
+    "got": "^12.3.1",
+    "node-fetch": "^3.2.10",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
