--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "got": "^12.3.1",
+    "mongoose": "^6.5.2",
+    "mongoose-seed": "^0.6.0",
     "node-fetch": "^3.2.10",
     "stream": "^0.0.2"
   },
