--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase": "^9.9.3",
     "got": "^12.3.1",
     "mongoose": "^6.5.2",
     "mongoose-seed": "^0.6.0",
