--- a/backend/package.json
+++ b/backend/package.json
@@ -20,14 +20,14 @@
   },
   "homepage": "https://github.com/onemok/BerryHealthy-HackThe6ix#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "firebase": "^9.9.3",
     "got": "^12.3.1",
     "mongoose": "^6.5.2",
     "mongoose-seed": "^0.6.0",
-    "node-fetch": "^2.6.6",
-    "stream": "^0.0.2"
+    "node-fetch": "^2.6.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
